# ea_principles

./: .dockerignore  .gitignore  CLAUDE.md  Dhir_Saxena_CV_Head_of_AI_Engineering.md  Dhir_Saxena_CV_Leadership.rtf  Dhir_Saxena_Lead_AI_Architect_CV.docx  Dhir_Saxena_Lead_AI_Architect_CV.html  Dockerfile  Dockerfile.crm  GATEWAY.md  README.md  action_gate_demo_BUILD.md  ai_solution_architect_accelerator_curriculum.md  docker-compose.yml  guardrail.md  hubspot.md  legal_bucket_sourcing_eu_uk_us.md  package-lock.json  package.json  part_3_enforcement_responsibilities.md  participants_77971255808_2026_06_22 (1).numbers  remote_app.md  workshop-bridge-slide.html  workshop_launch_email.md  zoom_attendees_email_match.numbers
July5-Maven/: Doc1.docx
aegis/: DEPLOY.md  SETUP.md  TESTING.md
aegis/backend/: .env.example  Dockerfile  README.md  pyproject.toml
aegis/backend/aegis/: __init__.py  catalogue.py  guardrails.py  reference.py  rubrics.py  server.py
agentflow/: README.md  pipeline.md
agentflow/app/: .gitignore  BUILD_PROMPT.md  README.md  anchor.json  pyproject.toml  schema.sql  test_checkpointer.py
agentflow/app/agentflow_app/: __init__.py  api.py  cli.py  composer.py  config.py  deterministic_nodes.py  env.py  llm_client.py  persistence.py  pipeline.py  prompt_loader.py  rubric.py  schema_convert.py  section_subgraph.py  state.py  step_promotion.py  supabase_checkpointer.py  validator.py
agentflow/app/tests/: test_persistence.py  test_pipeline_integration.py  test_section_subgraph.py  test_step_promotion.py
app/: globals.css  layout.tsx  page.tsx
(+574 files in other folders)
