[project]
name = "aegis-backend"
version = "0.1.0"
description = "Aegis — server-side engine for the enterprise AI architecture standards catalogue"
requires-python = ">=3.10"
dependencies = ["mcp>=1.2.0"]

[project.scripts]
aegis-server = "aegis.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aegis"]
